[RW-14704][risk=no] Unlink Initial Credits When Exhausted (#9299)